test/parse/relaxed/bad/zerozerovline.sol
s SATISFIABLE
v 0 0
